// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages Reminders should display the reminder indicator in the footer if it is fetching 1`] = `
<ActivityIndicator
  animating={true}
  color="#999999"
  hidesWhenStopped={true}
  size="large"
  style={
    Object {
      "marginVertical": 20,
    }
  }
/>
`;

exports[`Pages Reminders should renders correctly with reminders and fetching 1`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    onBack={[MockFunction]}
    title="Reminders"
  />
  <FlatList
    ListFooterComponent={[Function]}
    data={
      Array [
        Object {
          "body": "My body",
          "created_at": "1991-12-17",
          "frequency_type": "year",
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReached={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    onEndReachedThreshold={0.5}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</Component>
`;

exports[`Pages Reminders should renders correctly with reminders and fetching 2`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "borderBottomWidth": 0.5,
      "borderColor": "#E2E4E5",
      "flexDirection": "row",
      "paddingHorizontal": 15,
      "paddingVertical": 20,
    }
  }
>
  <Component
    style={
      Object {
        "paddingRight": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#355974",
          "fontSize": 17,
          "textAlign": "center",
        }
      }
    >
      Feb 14
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#355974",
          "fontSize": 20,
          "textAlign": "center",
        }
      }
    >
      2017
    </Text>
  </Component>
  <Component
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    />
    <Component
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#818181",
            "fontSize": 14,
            "marginTop": 5,
          }
        }
      >
        a few seconds ago
      </Text>
      <Component
        style={
          Object {
            "backgroundColor": "#4A90E2",
            "borderRadius": 5,
            "marginLeft": 6,
            "marginTop": 5,
            "paddingHorizontal": 5,
            "paddingVertical": 1,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "fontSize": 13,
            }
          }
        >
          every year
        </Text>
      </Component>
    </Component>
  </Component>
</View>
`;

exports[`Pages Reminders should renders correctly with reminders and fetching 3`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    onBack={[MockFunction]}
    title="Reminders"
  />
  <FlatList
    ListFooterComponent={[Function]}
    data={
      Array [
        Object {
          "body": "My body",
          "created_at": "1991-12-17",
          "frequency_type": "month",
        },
        Object {
          "body": "My body 2",
          "created_at": "1993-12-17",
          "frequency_type": "all_time",
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReached={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    onEndReachedThreshold={0.5}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</Component>
`;

exports[`Pages Reminders should renders correctly with reminders and fetching 4`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "borderBottomWidth": 0.5,
      "borderColor": "#E2E4E5",
      "flexDirection": "row",
      "paddingHorizontal": 15,
      "paddingVertical": 20,
    }
  }
>
  <Component
    style={
      Object {
        "paddingRight": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#355974",
          "fontSize": 17,
          "textAlign": "center",
        }
      }
    >
      Feb 14
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#355974",
          "fontSize": 20,
          "textAlign": "center",
        }
      }
    >
      2017
    </Text>
  </Component>
  <Component
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    />
    <Component
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#818181",
            "fontSize": 14,
            "marginTop": 5,
          }
        }
      >
        a few seconds ago
      </Text>
      <Component
        style={
          Object {
            "backgroundColor": "#4A90E2",
            "borderRadius": 5,
            "marginLeft": 6,
            "marginTop": 5,
            "paddingHorizontal": 5,
            "paddingVertical": 1,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "fontSize": 13,
            }
          }
        >
          every month
        </Text>
      </Component>
    </Component>
  </Component>
</View>
`;

exports[`Pages Reminders should renders correctly with reminders and fetching 5`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "borderBottomWidth": 0.5,
      "borderColor": "#E2E4E5",
      "flexDirection": "row",
      "paddingHorizontal": 15,
      "paddingVertical": 20,
    }
  }
>
  <Component
    style={
      Object {
        "paddingRight": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#355974",
          "fontSize": 17,
          "textAlign": "center",
        }
      }
    >
      Feb 14
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#355974",
          "fontSize": 20,
          "textAlign": "center",
        }
      }
    >
      2017
    </Text>
  </Component>
  <Component
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    />
    <Component
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#818181",
            "fontSize": 14,
            "marginTop": 5,
          }
        }
      >
        a few seconds ago
      </Text>
      <Component
        style={
          Object {
            "backgroundColor": "#4A90E2",
            "borderRadius": 5,
            "marginLeft": 6,
            "marginTop": 5,
            "paddingHorizontal": 5,
            "paddingVertical": 1,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "fontSize": 13,
            }
          }
        >
          frequency.all_time
        </Text>
      </Component>
    </Component>
  </Component>
</View>
`;

exports[`Pages Reminders should renders correctly without reminders and fetching 1`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    onBack={[MockFunction]}
    title="Reminders"
  />
  <FlatList
    ListFooterComponent={[Function]}
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReached={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    onEndReachedThreshold={0.5}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</Component>
`;

exports[`Pages Reminders should renders correctly without reminders and not fetching 1`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    onBack={[MockFunction]}
    title="Reminders"
  />
  <EmptyActivity
    image={1}
    subtitle="Your memory might let you down - we won’t."
    title="Be reminded at the right time, for things that matter."
  />
</Component>
`;
